--- a/Lab A - First Steps.ipynb
+++ b/Lab A - First Steps.ipynb
@@ -7,9 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Blank Code Cell\n",
-    "## Use only if you need to install the grader and/or Qiskit\n",
-    "## If you are running this notebook in the IBM Quantum Lab - you can ignore this cell"
+    "!pip install 'qc-grader[qiskit] @ git+https://github.com/qiskit-community/Quantum-Challenge-Grader.git'\n",
+    "!pip install qiskit"
    ]
   },
   {
