--- a/Lab B - Quantum Enigmas.ipynb
+++ b/Lab B - Quantum Enigmas.ipynb
@@ -7,9 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Blank Code Cell\n",
-    "## Use only if you need to install the grader and/or Qiskit\n",
-    "## If you are running this notebook in the IBM Quantum Lab - you can ignore this cell"
+    "!pip install 'qc-grader[qiskit] @ git+https://github.com/qiskit-community/Quantum-Challenge-Grader.git'\n",
+    "!pip install qiskit"
    ]
   },
   {
@@ -66,10 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "918e178c-2e3d-483d-8242-2816e6828232",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: QC_GRADE_ONLY=true\n",
+      "env: QC_GRADING_ENDPOINT=https://qac-grading.quantum-computing.ibm.com\n"
+     ]
+    }
+   ],
    "source": [
     "## Run this cell to make sure your grader is setup correctly\n",
     "\n",
@@ -117,12 +125,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "363f553f-e218-48c3-bdd6-f8670dbe86c3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐     \n",
+       "q_0: ┤ H ├──■──\n",
+       "     └───┘┌─┴─┐\n",
+       "q_1: ─────┤ X ├\n",
+       "     ┌───┐└───┘\n",
+       "q_2: ┤ H ├─────\n",
+       "     └───┘     \n",
+       "c: 3/══════════\n",
+       "               </pre>"
+      ],
+      "text/plain": [
+       "     ┌───┐     \n",
+       "q_0: ┤ H ├──■──\n",
+       "     └───┘┌─┴─┐\n",
+       "q_1: ─────┤ X ├\n",
+       "     ┌───┐└───┘\n",
+       "q_2: ┤ H ├─────\n",
+       "     └───┘     \n",
+       "c: 3/══════════\n",
+       "               "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from qiskit import QuantumCircuit\n",
     "\n",
@@ -131,7 +169,8 @@
     "\n",
     "## Write your code below this line ##\n",
     "\n",
-    "\n",
+    "qc.h([0,2])\n",
+    "qc.cnot(0,1)\n",
     "\n",
     "\n",
     "## Do not change the code below here ##\n",
@@ -142,12 +181,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0410a7d8-1ce1-4d1f-b78b-486886a8ab65",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grading your answer. Please wait...\n",
+      "\n",
+      "Congratulations 🎉! Your answer is correct.\n"
+     ]
+    }
+   ],
    "source": [
     "# Grader Cell: Run this to submit your answer\n",
     "from qc_grader.challenges.fall_fest23 import grade_ex2a\n",
@@ -183,12 +232,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9681ffeb-eddf-4b18-818a-846ffd59fd0b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ░           ┌───┐     \n",
+       "q_0: ─░───────────┤ X ├─────\n",
+       "      ░ ┌───┐     └─┬─┘     \n",
+       "q_1: ─░─┤ X ├───────┼───────\n",
+       "      ░ └─┬─┘┌───┐  │  ┌───┐\n",
+       "q_2: ─░───■──┤ X ├──■──┤ X ├\n",
+       "      ░      └───┘     └───┘\n",
+       "c: 3/═══════════════════════\n",
+       "                            </pre>"
+      ],
+      "text/plain": [
+       "      ░           ┌───┐     \n",
+       "q_0: ─░───────────┤ X ├─────\n",
+       "      ░ ┌───┐     └─┬─┘     \n",
+       "q_1: ─░─┤ X ├───────┼───────\n",
+       "      ░ └─┬─┘┌───┐  │  ┌───┐\n",
+       "q_2: ─░───■──┤ X ├──■──┤ X ├\n",
+       "      ░      └───┘     └───┘\n",
+       "c: 3/═══════════════════════\n",
+       "                            "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from qiskit import QuantumCircuit\n",
     "\n",
@@ -199,8 +278,10 @@
     "\n",
     "## Write your code below this line ## \n",
     "\n",
-    "\n",
-    "\n",
+    "qc.cnot(2,1)\n",
+    "qc.x(2)\n",
+    "qc.cnot(2,0)\n",
+    "qc.x(2)\n",
     "\n",
     "## Do not change the code below this line ##\n",
     "\n",
@@ -211,10 +292,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2fa1f0a6-e811-44a0-b02f-c55b507f5e9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grading your answer. Please wait...\n",
+      "\n",
+      "Congratulations 🎉! Your answer is correct.\n"
+     ]
+    }
+   ],
    "source": [
     "# Grader Cell: Run this to submit your answer\n",
     "\n",
@@ -654,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
